added first all

--- a/index.html
+++ b/index.html
@@ -8,8 +8,32 @@
      <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
     <!-- tailwind cnd  -->
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    
 </head>
-<body>
-    <button class="btn btn-neutral">Neutral</button>
+<body class="bg-[#f4f5f7] h-[100vh] flex flex-col justify-center items-center">
+
+    <div class="h-[130px] w-[300px] bg-[url('./assets/bg.png')] bg-cover
+    flex justify-center items-center">
+      <img src="assets/Group.png" alt="">
+    </div>
+
+    <form class=" w-[350px] bg-white rounded-2xl p-10 " >
+      <div class="">
+        <label class="font-semibold text-2xl" for="">Mobile Number</label>
+        <br>
+        <input id="mobile-number" type="text" placeholder="Enter your number" class="input bg-[#f4f5f7] rounded-2xl w-full mt-5" />
+      </div>
+      <div class="">
+        <br>
+        <label class="font-semibold text-2xl " for="">4 Digit Pin</label>
+        <br>
+        <input id="pin-number" type="text" placeholder="Enter 4 Digit Pin" class="input bg-[#f4f5f7] rounded-2xl w-full mt-5" />
+      </div>
+      <br>
+        <button  id="btn-login" class="btn bg-[#0874F2] text-white w-full font-semibold rounded-2xl text-2xl">Login</button>
+    </form>
+
+      <!-- JavaScript File -->
+    <script src="js/script.js"></script>
 </body>
 </html>
